--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
       <button type="submit">Search</button>
     </form>
     <ul class="gallery"></ul>
+    <button class="js-btn-load hidden" type="button">Load more</button>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
