implementation of recommendations

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     </form>
     <ul class="gallery"></ul>
     <button class="js-btn-load hidden" type="button">Load more</button>
+    <span class="loader hidden"></span>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
